# PDS-Proiect

./: Documentatie Proiect PDS.docx  README.md  batch_processing.py  image_preproccesing.py  requirements.txt  updated_dataset_image_preproccesing.py
Initial app/: CMakeLists.txt  image_view_test.py  main.cpp
Neon optimized app/: CMakeLists.txt
Neon optimized app/src/: main.cpp
